--- a/index.html
+++ b/index.html
@@ -9,6 +9,41 @@
             <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;600;800&display=swap" rel="stylesheet">
         </head>
         <body>
-        
+            <header>
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-5">
+                            <a><p class="name">Golden</p></a>
+                        </div>
+                        <div class=" col-7 navbar">
+                            <ul class="list-group">
+                                <li><a href="#"><p>HOME</p></a>
+                                    <ul class="inside-list">
+                                        <li><a href="#"><p>Cres</p></a></li>
+                                        <li><a href="#"><p>Dapibus</p></a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#"><p>SERVICES</p></a>
+                                    <ul class="inside-list">
+                                        <li><a href="#"><p>Cres</p></a></li>
+                                        <li><a href="#"><p>Dapibus</p></a></li>
+                                        <li><a href="#"><p>Morbi</p></a></li>
+                                    </ul>
+                                </li>
+                                <li><a href="#"><p>PORTFOLIO</p></a></li>
+                                <li><a href="#"><p>ABOUT</p></a></li>
+                                <li><a href="#"><p>CONTACT</p></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-12 splash">
+                            <h2 class="subtitle">Welcome to our studio</h2>
+                            <h1 class="title">It's nice to meet you</h1>
+                            <a class="btn">Tel me more</a>
+                        </div>
+                    </div>
+                </div>
+            </header>
         </body>
     </html>
