--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
             <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
             <title>Golden</title>
             <link rel="stylesheet" href="vendor/bootstrap-grid.css">
-            <link rel="stylesheet" href="style.css">
-            <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;400;600;800&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="css/style.css">
+            <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lora:ital@0;1&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet">
         </head>
         <body>
             <header>
@@ -38,8 +38,8 @@
                     </div>
                     <div class="row">
                         <div class="col-12 splash">
-                            <h2 class="subtitle">Welcome to our studio</h2>
-                            <h1 class="title">It's nice to meet you</h1>
+                            <h2>Welcome to our studio!</h2>
+                            <h1>It's nice to meet you</h1>
                             <a class="btn">Tel me more</a>
                         </div>
                     </div>
