Add more fonts to html, move background to header, change container bootstrap type, change paddings and font-size in list-group

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
             <title>Golden</title>
             <link rel="stylesheet" href="vendor/bootstrap-grid.css">
             <link rel="stylesheet" href="css/style.css">
-            <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lora:ital@0;1&family=Roboto:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lora:ital@0;1&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400&display=swap" rel="stylesheet">        
         </head>
         <body>
             <header>
-                <div class="container-fluid">
+                <div class="container">
                     <div class="row">
                         <div class="col-5">
                             <a><p class="name">Golden</p></a>
