Add style for splash button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <div class="col-12 splash">
                             <h2>Welcome to our studio!</h2>
                             <h1>It's nice to meet you</h1>
-                            <a class="btn">Tel me more</a>
+                            <a class="btn">Tell me more</a>
                         </div>
                     </div>
                 </div>
