Add html for section services and fontawesome

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
             <title>Golden</title>
             <link rel="stylesheet" href="vendor/bootstrap-grid.css">
             <link rel="stylesheet" href="css/style.css">
-            <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lora:ital@0;1&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400&display=swap" rel="stylesheet">        
+            <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Lora:ital@0;1&family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400&display=swap" rel="stylesheet">
+            <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+
         </head>
         <body>
             <header>
@@ -45,5 +47,33 @@
                     </div>
                 </div>
             </header>
+            <section class="services">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h1 class="section-title">Services</h1>
+                            <h4 class="subtitle">Fusce in nonummy id, placerat quam.</h4>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="column col-4">
+                            <a href="#"><i class="fas fa-shopping-basket"></i></a>
+                            <h3 class="column-title">E-commerce</h3>
+                            <p>Curae, Nulla ipsum ac dignissim massa. Aliquam malesuada congue. Donec nisl eu sodales quam. Mauris fringilla turpis. Duis.</p>
+                        </div>
+                        <div class="column col-4">
+                            <a href="#"><i class="fas fa-laptop-code"></i></a>
+                            <h3 class="column-title">Responsive Web</h3>
+                            <p>Duis mauris magna, at eros. Pellentesque pede quis ante. Proin erat in volutpat metus. Class aptent taciti.</p>
+                        </div>
+                        <div class="column col-4">
+                            <a href="#"><i class="fas fa-lock"></i></a>
+                            <h3 class="column-title">Web Security</h3>
+                            <p>Vestibulum rutrum elementum. Morbi eleifend. Sed scelerisque nulla in wisi. Suspendisse vehicula. Duis ornare mi augue, congue.</p>
+                        </div>
+
+                    </div>
+                </div>
+            </section>
         </body>
     </html>
