--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <header>
                 <div class="container">
                     <div class="row">
-                        <div class="col-5">
+                        <div class="col-6">
                             <a><p class="name">Golden</p></a>
                         </div>
-                        <div class=" col-7 navbar">
+                        <div class=" col-6 navbar">
                             <ul class="list-group">
                                 <li><a href="#"><p>HOME</p></a>
                                     <ul class="inside-list">
@@ -41,8 +41,12 @@
                     <div class="row">
                         <div class="col-12 splash">
                             <h2>Welcome to our studio!</h2>
+                        </div>
+                        <div class="col-12 splash">
                             <h1>It's nice to meet you</h1>
-                            <a class="btn">Tell me more</a>
+                        </div>
+                        <div class="col-12 splash">
+                            <a class="button">Tell me more</a>
                         </div>
                     </div>
                 </div>
