Add style for portfolio section

--- a/index.html
+++ b/index.html
@@ -88,34 +88,34 @@
                     </div>
                     <div class="row">
                         <div class="column col-4">
-                            <a href="#"><img src="https://i.postimg.cc/MGXsDcbF/portfolio-1.png"></a>
+                            <a href="#"><img src="https://i.postimg.cc/Qt8g4xzv/portfolio-1.png"></a>
                             <h3 class="column-title">Ebony & Ivory</h3>
-                            <h4 class="subtitle">Branding</h4>
+                            <h4 class="column-subtitle">Branding</h4>
                         </div>
                         <div class="column col-4">
-                            <a href="#"><img src="https://i.postimg.cc/q7Y1Zk1M/portfolio-2.png"></a>
+                            <a href="#"><img src="https://i.postimg.cc/Hx6wf1Dn/portfolio-2.png"></a>
                             <h3 class="column-title">Smart Stationery</h3>
-                            <h4 class="subtitle">Print Design</h4>
+                            <h4 class="column-subtitle">Print Design</h4>
                         </div>
                         <div class="column col-4">
-                            <a href="#"><img src="https://i.postimg.cc/MHJdq9kC/portfolio-3.png"></a>
+                            <a href="#"><img src="https://i.postimg.cc/xjFG5Q3F/portfolio-3.png"></a>
                             <h3 class="column-title">Clever Poster</h3>
-                            <h4 class="subtitle">Print Design</h4>
+                            <h4 class="column-subtitle">Print Design</h4>
                         </div>
                         <div class="column col-4">
-                            <a href="#"><img src="https://i.postimg.cc/d3Rn1GwL/portfolio-4.png"></a>
+                            <a href="#"><img src="https://i.postimg.cc/Y0V1CNSw/portfolio-4.png"></a>
                             <h3 class="column-title">Vinyl Record</h3>
-                            <h4 class="subtitle">Product Mock-Up</h4>
+                            <h4 class="column-subtitle">Product Mock-Up</h4>
                         </div>
                         <div class="column col-4">
-                            <a href="#"><img src="https://i.postimg.cc/ZRdVG1QP/portfolio-5.png"></a>
+                            <a href="#"><img src="https://i.postimg.cc/5yjBJKb3/portfolio-5.png"></a>
                             <h3 class="column-title">Treehouse Template</h3>
-                            <h4 class="subtitle">Web Design</h4>
+                            <h4 class="column-subtitle">Web Design</h4>
                         </div>
                         <div class="column col-4">
-                            <a href="#"><img src="https://i.postimg.cc/c4ZXzkBY/portfolio-6.png"></a>
+                            <a href="#"><img src="https://i.postimg.cc/fTtcgPHW/portfolio-6.png"></a>
                             <h3 class="column-title">Burned Logo</h3>
-                            <h4 class="subtitle">Branding</h4>
+                            <h4 class="column-subtitle">Branding</h4>
                         </div>
 
                     </div>
