Add html for page footer

--- a/index.html
+++ b/index.html
@@ -117,8 +117,24 @@
                             <h3 class="column-title">Burned Logo</h3>
                             <h4 class="column-subtitle">Branding</h4>
                         </div>
-
                     </div>
+                </div>
+            </section>
+            <section class="footer">
+                <div class="row">
+                    <div class="col-4 column">
+                        <p>&copy; Copyright 2014 FreebiesXpress.com</p>
+                    </div>
+                    <div class="col-4 column">
+                        <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
+                        <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
+                        <a href="#"><i class="fab fa-pinterest-p"></i>Pinterest</a>
+                        <a href="#"><i class="fab fa-google-plus-g"></i>GooglePlus</a>
+                    </div>
+                    <div class="col-4 column">
+                        
+                    </div>
+
                 </div>
             </section>
         </body>
