Add style for page footer

--- a/index.html
+++ b/index.html
@@ -120,22 +120,31 @@
                     </div>
                 </div>
             </section>
-            <section class="footer">
+            <footer>
+                <div class="container">
                 <div class="row">
                     <div class="col-4 column">
                         <p>&copy; Copyright 2014 FreebiesXpress.com</p>
                     </div>
                     <div class="col-4 column">
-                        <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
-                        <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
-                        <a href="#"><i class="fab fa-pinterest-p"></i>Pinterest</a>
-                        <a href="#"><i class="fab fa-google-plus-g"></i>GooglePlus</a>
+                        <div class="social-link">
+                            <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
+                        </div>
+                        <div class="social-link">
+                            <a href="#"><i class="fab fa-facebook-f"></i>Facebook</a>
+                        </div>
+                        <div class="social-link">
+                            <a href="#"><i class="fab fa-pinterest-p"></i>Pinterest</a>
+                        </div>
+                        <div class="social-link">
+                            <a href="#"><i class="fab fa-google-plus-g"></i>GooglePlus</a>
+                        </div>
                     </div>
                     <div class="col-4 column">
                         
                     </div>
-
                 </div>
-            </section>
+                </div>
+            </footer>
         </body>
     </html>
