Add html breakpoints bootstrap classes for page

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <header>
                 <div class="container">
                     <div class="row">
-                        <div class="col-6">
+                        <div class="col-lg-6 col-sm-12">
                             <a><p class="name">Golden</p></a>
                         </div>
-                        <div class=" col-6 navbar">
+                        <div class=" col-lg-6 col-sm-12 navbar">
                             <ul class="list-group">
                                 <li><a href="#"><p>HOME</p></a>
                                     <ul class="inside-list">
@@ -56,17 +56,17 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="column col-4">
+                        <div class="column col-12 col-lg-4">
                             <a href="#"><i class="fas fa-shopping-basket"></i></a>
                             <h3 class="column-title">E-commerce</h3>
                             <p>Curae, Nulla ipsum ac dignissim massa. Aliquam malesuada congue. Donec nisl eu sodales quam. Mauris fringilla turpis. Duis.</p>
                         </div>
-                        <div class="column col-4">
+                        <div class="column col-12 col-lg-4">
                             <a href="#"><i class="fas fa-laptop-code"></i></a>
                             <h3 class="column-title">Responsive Web</h3>
                             <p>Duis mauris magna, at eros. Pellentesque pede quis ante. Proin erat in volutpat metus. Class aptent taciti.</p>
                         </div>
-                        <div class="column col-4">
+                        <div class="column col-12 col-lg-4">
                             <a href="#"><i class="fas fa-lock"></i></a>
                             <h3 class="column-title">Web Security</h3>
                             <p>Vestibulum rutrum elementum. Morbi eleifend. Sed scelerisque nulla in wisi. Suspendisse vehicula. Duis ornare mi augue, congue.</p>
@@ -119,10 +119,10 @@
             <footer>
                 <div class="container">
                 <div class="row">
-                    <div class="col-4 column">
+                    <div class="col-12 col-lg-4 column">
                         <p>&copy; Copyright 2014 FreebiesXpress.com</p>
                     </div>
-                    <div class="col-4 column">
+                    <div class="col-12 col-lg-4 column">
                         <div class="social-link">
                             <a href="#"><i class="fab fa-twitter"></i>Twitter</a>
                         </div>
@@ -136,7 +136,7 @@
                             <a href="#"><i class="fab fa-google-plus-g"></i>GooglePlus</a>
                         </div>
                     </div>
-                    <div class="col-4 column">
+                    <div class="col-lg-4 column">
                         
                     </div>
                 </div>
